crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__pointer_deref_increment.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32)))
  (memory (;0;) 1)
  (export "heap" (memory 0))
  (export "increment" (func 0))
  (func (;0;) (type 0) (param i32)
    (local i32)
    local.get 0
    i32.load
    local.set 1
    local.get 0
    local.get 1
    i32.const 1
    i32.add
    i32.store
  )
)
