crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__slice_range_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32 i32) (result i32 i32)))
  (type (;1;) (func (param i32 i32 i32) (result i32 i32)))
  (type (;2;) (func (param i32 i32 i32 i32) (result i32 i32)))
  (memory (;0;) 1)
  (export "full_copy" (func 0))
  (export "to_limit" (func 1))
  (export "from_start" (func 2))
  (export "bounded" (func 3))
  (func (;0;) (type 0) (param i32 i32) (result i32 i32)
    (local i32 i32)
    local.get 0
    local.set 2
    local.get 1
    local.set 3
    local.get 2
    local.get 3
  )
  (func (;1;) (type 1) (param i32 i32 i32) (result i32 i32)
    (local i32 i32)
    local.get 0
    local.set 3
    local.get 2
    local.set 4
    local.get 3
    local.get 4
  )
  (func (;2;) (type 1) (param i32 i32 i32) (result i32 i32)
    (local i32 i32)
    local.get 0
    local.get 2
    i32.const 2
    i32.shl
    i32.add
    local.set 3
    local.get 1
    local.get 2
    i32.sub
    local.set 4
    local.get 3
    local.get 4
  )
  (func (;3;) (type 2) (param i32 i32 i32 i32) (result i32 i32)
    (local i32 i32)
    local.get 2
    local.get 3
    i32.gt_s
    if ;; label = @1
      unreachable
    end
    local.get 0
    local.get 2
    i32.const 2
    i32.shl
    i32.add
    local.set 4
    local.get 3
    local.get 2
    i32.sub
    local.set 5
    local.get 4
    local.get 5
  )
)
