crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__struct_field_access_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32 i32) (result i32)))
  (export "sum" (func 0))
  (func (;0;) (type 0) (param i32 i32) (result i32)
    local.get 0
    local.get 1
    i32.add
  )
)
