crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__struct_pointer_load_and_store.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32 i32 i32)))
  (type (;1;) (func (param i32) (result i32)))
  (memory (;0;) 1)
  (export "heap" (memory 0))
  (export "store_point" (func 0))
  (export "load_x" (func 1))
  (export "load_y" (func 2))
  (func (;0;) (type 0) (param i32 i32 i32)
    local.get 0
    local.get 1
    i32.store
    local.get 0
    local.get 2
    i32.store offset=4
  )
  (func (;1;) (type 1) (param i32) (result i32)
    (local i32)
    local.get 0
    i32.load
    local.tee 1
  )
  (func (;2;) (type 1) (param i32) (result i32)
    (local i32)
    local.get 0
    i32.load offset=4
    local.tee 1
  )
)
