crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__tuple_block_result_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32) (result i32 i32)))
  (type (;1;) (func (result i32 i32)))
  (export "make_pair" (func 0))
  (func (;0;) (type 0) (param i32) (result i32 i32)
    (local i32 i32)
    block (type 1) (result i32 i32) ;; label = @1
      local.get 0
      local.get 0
      i32.const 1
      i32.add
    end
    local.set 2
    local.set 1
    local.get 1
    local.get 2
  )
)
