crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__tuple_field_access_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32 i32) (result i32 i32)))
  (export "swap" (func 0))
  (func (;0;) (type 0) (param i32 i32) (result i32 i32)
    (local i32 i32)
    local.get 1
    local.set 2
    local.get 0
    local.set 3
    local.get 2
    local.get 3
  )
)
